fixed the unit links and corrected spacing

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -21,7 +21,7 @@
 .Weather li {
   font-size: 16px;
   font-weight: 100;
-  line-height: 19px;
+  line-height: 20px;
   list-style: none;
 }
 
@@ -29,10 +29,10 @@
   font-weight: bold;
   color: rgb(33, 33, 33);
   font-size: 64px;
-  line-height: 64px;
+  line-height: 80px;
   margin-left: 5px;
   font-weight: 400;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .Weather canvas {
@@ -46,4 +46,13 @@
   position: relative;
   line-height: 1;
   top: -34px;
+  margin-left: 5px;
+}
+
+.Weather .unit a {
+  text-decoration: none;
+}
+
+.Weather ul.percents {
+  margin-left: 100px;
 }
